Fix pane rendering on mobile view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,6 +128,7 @@ nav{
   display: flex;
   flex-direction: column;
   position: fixed;
+  z-index: 100;
   top: 60px;
   width: 288px;
   row-gap: 24px;
